Mudança na estilização da barra de navegação

--- a/angular-blog/src/index.html
+++ b/angular-blog/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularBlog</title>
+  <title>KnuppsBlog</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://github.com/gknpp23/Angular-Developer-Training-DIO/blob/main/angular-blog/src/assets/image/logo.png?raw=true">
 </head>
 <body>
   <app-root></app-root>
